--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
               <span class="font-light text-emerald-400">ENERGY</span></span
             >
           </div>
+          
+          <!-- Desktop Menu -->
           <div
             class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-300"
           >
@@ -57,7 +59,22 @@
               Inversión & Simulador
             </a>
           </div>
+
+          <!-- Mobile Menu Button -->
+          <button id="mobile-menu-btn" class="md:hidden text-slate-300 hover:text-white p-2">
+            <i class="fas fa-bars text-2xl"></i>
+          </button>
         </div>
+      </div>
+
+      <!-- Mobile Menu Overlay -->
+      <div id="mobile-menu" class="hidden md:hidden absolute top-20 left-0 w-full bg-slate-950/95 backdrop-blur-xl border-b border-white/10 p-6 flex flex-col gap-6 shadow-2xl">
+        <a href="#about" class="text-lg font-medium text-slate-300 hover:text-emerald-400 transition-colors border-b border-white/5 pb-2">La Empresa</a>
+        <a href="#tech" class="text-lg font-medium text-slate-300 hover:text-emerald-400 transition-colors border-b border-white/5 pb-2">Tecnología</a>
+        <a href="#impact" class="text-lg font-medium text-slate-300 hover:text-emerald-400 transition-colors border-b border-white/5 pb-2">Impacto</a>
+        <a href="#investment" class="bg-emerald-600 text-center text-white font-bold py-3 rounded-xl shadow-lg shadow-emerald-900/40 mt-2">
+          Inversión & Simulador
+        </a>
       </div>
     </nav>
 
@@ -80,7 +97,7 @@
             </span>
             Operación Activa: Texas, USA
           </div>
-          <h1 class="text-5xl lg:text-7xl font-bold leading-tight text-white">
+          <h1 class="text-4xl lg:text-7xl font-bold leading-tight text-white">
             Transformando Residuos en <br />
             <span
               class="text-transparent bg-clip-text bg-gradient-to-r from-emerald-400 to-blue-500 text-glow"
@@ -116,13 +133,13 @@
           </div>
         </div>
         <!-- Floating Cards Visual -->
-        <div class="relative hidden lg:block">
+        <div class="relative mt-12 lg:mt-0 lg:block">
           <div
             class="absolute -inset-4 bg-emerald-500/20 rounded-full blur-3xl"
           ></div>
           <div class="relative grid gap-6">
             <div
-              class="bg-slate-900/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-2xl transform translate-x-12"
+              class="bg-slate-900/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-2xl lg:transform lg:translate-x-12"
             >
               <div class="flex items-center gap-4 mb-4">
                 <div
@@ -137,7 +154,7 @@
               </div>
             </div>
             <div
-              class="bg-slate-900/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-2xl transform -translate-x-4"
+              class="bg-slate-900/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-2xl lg:transform lg:-translate-x-4"
             >
               <div class="flex items-center gap-4 mb-4">
                 <div
@@ -152,7 +169,7 @@
               </div>
             </div>
             <div
-              class="bg-slate-900/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-2xl transform translate-x-8"
+              class="bg-slate-900/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-2xl lg:transform lg:translate-x-8"
             >
               <div class="flex items-center gap-4 mb-4">
                 <div
@@ -483,7 +500,7 @@
                   max="10"
                   step="1"
                   value="1"
-                  class="w-full h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer slider-thumb"
+                  class="w-full h-4 lg:h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer slider-thumb"
                 />
                 <p class="text-xs text-slate-500 mt-2">
                   Simule el crecimiento de la flota
@@ -509,7 +526,7 @@
                   max="2000"
                   step="100"
                   value="1000"
-                  class="w-full h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer slider-thumb"
+                  class="w-full h-4 lg:h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer slider-thumb"
                 />
               </div>
 
@@ -530,7 +547,7 @@
                   max="30"
                   step="1"
                   value="24"
-                  class="w-full h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer slider-thumb"
+                  class="w-full h-4 lg:h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer slider-thumb"
                 />
               </div>
 
@@ -551,7 +568,7 @@
                   max="50"
                   step="1"
                   value="30"
-                  class="w-full h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer slider-thumb"
+                  class="w-full h-4 lg:h-2 bg-slate-700 rounded-lg appearance-none cursor-pointer slider-thumb"
                 />
                 <div
                   class="mt-4 p-4 bg-slate-800 rounded-lg border border-white/5 text-sm"
