Update simulator scenarios and fix image path

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             class="relative rounded-2xl overflow-hidden border border-white/10 shadow-2xl"
           >
             <img
-              src="./public/maquina2.jpg"
+              src="/maquina2.jpg"
               alt="Oil Industry Technology"
               class="w-full h-full object-cover opacity-60 hover:opacity-80 transition-opacity duration-500"
             />
