Add detailed history PDF button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <!-- Desktop Menu -->
         <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-300">
           <a href="#about" class="hover:text-emerald-400 transition-colors">La Empresa</a>
+          <a href="#history" class="hover:text-emerald-400 transition-colors">Historia</a>
           <a href="#tech" class="hover:text-emerald-400 transition-colors">Tecnología</a>
           <a href="#impact" class="hover:text-emerald-400 transition-colors">Impacto</a>
           <a href="#investment"
@@ -49,8 +50,9 @@
     <div id="mobile-menu"
       class="hidden md:hidden absolute top-20 left-0 w-full bg-slate-950/95 backdrop-blur-xl border-b border-white/10 p-6 flex flex-col gap-6 shadow-2xl">
       <a href="#about"
-        class="text-lg font-medium text-slate-300 hover:text-emerald-400 transition-colors border-b border-white/5 pb-2">La
-        Empresa</a>
+        class="text-lg font-medium text-slate-300 hover:text-emerald-400 transition-colors border-b border-white/5 pb-2">La Empresa</a>
+      <a href="#history"
+        class="text-lg font-medium text-slate-300 hover:text-emerald-400 transition-colors border-b border-white/5 pb-2">Historia</a>
       <a href="#tech"
         class="text-lg font-medium text-slate-300 hover:text-emerald-400 transition-colors border-b border-white/5 pb-2">Tecnología</a>
       <a href="#impact"
@@ -201,6 +203,144 @@
           </p>
         </div>
       </div>
+    </div>
+  </section>
+
+  <!-- SECTION: THE HISTORY -->
+  <section id="history" class="py-24 bg-slate-900 border-t border-white/5 relative">
+    <div class="max-w-7xl mx-auto px-6 lg:px-8">
+      <div class="text-center max-w-3xl mx-auto mb-16">
+        <h2 class="text-emerald-400 font-bold uppercase tracking-widest text-sm mb-4">
+          Nuestra Historia
+        </h2>
+        <h3 class="text-4xl md:text-5xl font-bold text-white mb-6">
+          Evolución y Consolidación
+        </h3>
+        <p class="text-lg text-slate-400 leading-relaxed">
+          Un recorrido desde la experiencia operativa en la industria petrolera hasta el desarrollo y consolidación de la Tecnología Tritón.
+        </p>
+      </div>
+
+      <!-- Timeline Container -->
+      <div class="max-w-4xl mx-auto relative">
+        <!-- Vertical Line -->
+        <div class="absolute left-[20px] md:left-1/2 top-4 bottom-4 w-px bg-white/10 md:-translate-x-1/2"></div>
+
+        <!-- 2001 - 2012 -->
+        <div class="relative flex flex-col md:flex-row justify-between items-center mb-12 w-full group">
+          <div class="hidden md:block md:w-1/2"></div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 shadow-[0_0_10px_rgba(16,185,129,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2"></div>
+          <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
+            <div class="bg-slate-800/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-xl group-hover:border-emerald-500/30 transition-all duration-300">
+              <span class="text-emerald-400 font-bold text-sm tracking-wider uppercase mb-2 block">2001 - 2012</span>
+              <h4 class="text-xl font-bold text-white mb-3">Experiencia Previa</h4>
+              <p class="text-slate-400 text-sm">
+                Más de una década de experiencia en tratamiento de residuos, biorremediación y disposición de lodos aceitosos en operaciones clave como Hocol, Ecopetrol, Cepsa y Onimex. Este conocimiento técnico profundo fue la semilla de la innovación.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 2006 - 2011 -->
+        <div class="relative flex flex-col md:flex-row justify-between items-center mb-12 w-full group">
+          <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
+             <div class="bg-slate-800/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-xl group-hover:border-blue-500/30 transition-all duration-300">
+              <span class="text-blue-400 font-bold text-sm tracking-wider uppercase mb-2 block">2006 - 2011</span>
+              <h4 class="text-xl font-bold text-white mb-3">Diagnóstico y Concepción</h4>
+              <p class="text-slate-400 text-sm mb-4">
+                Operando en la Refinería de Barrancabermeja surgieron las restricciones normativas que prohibían tratamientos en campos. Esto impulsó el diseño y desarrollo de un sistema in-situ.
+              </p>
+              <div class="inline-block bg-slate-900 border border-white/5 rounded-lg p-3">
+                <span class="block text-xs text-slate-500 uppercase">Inversión Fase I y II</span>
+                <span class="font-bold text-white">USD $800,000</span>
+              </div>
+            </div>
+          </div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-blue-500 shadow-[0_0_10px_rgba(59,130,246,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2"></div>
+        </div>
+
+        <!-- 2012 - 2015 -->
+        <div class="relative flex flex-col md:flex-row justify-between items-center mb-12 w-full group">
+          <div class="hidden md:block md:w-1/2"></div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 shadow-[0_0_10px_rgba(16,185,129,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2"></div>
+          <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
+            <div class="bg-slate-800/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-xl group-hover:border-emerald-500/30 transition-all duration-300">
+              <span class="text-emerald-400 font-bold text-sm tracking-wider uppercase mb-2 block">2012 - 2015</span>
+              <h4 class="text-xl font-bold text-white mb-3">Piloto Exitoso: Pacific Rubiales</h4>
+              <p class="text-slate-400 text-sm mb-4">
+                Tercera fase de desarrollo y construcción final del primer equipo móvil. Tras un intenso periodo experimental, se procesaron más de 250,000 barriles.
+              </p>
+              <div class="inline-block bg-slate-900 border border-white/5 rounded-lg p-3">
+                <span class="block text-xs text-slate-500 uppercase">Prototipo y Pruebas</span>
+                <span class="font-bold text-white">USD $1,050,000</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 2017 - 2020 -->
+        <div class="relative flex flex-col md:flex-row justify-between items-center mb-12 w-full group">
+          <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
+             <div class="bg-slate-800/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-xl group-hover:border-blue-500/30 transition-all duration-300">
+              <span class="text-blue-400 font-bold text-sm tracking-wider uppercase mb-2 block">2017 - 2020</span>
+              <h4 class="text-xl font-bold text-white mb-3">Palma de Aceite y Superación</h4>
+              <p class="text-slate-400 text-sm mb-4">
+                Tras sortear la crisis petrolera, la tecnología demostró su gran versatilidad con ensayos exitosos y contratos para el tratamiento de lodos de extracción de palma.
+              </p>
+              <div class="inline-block bg-slate-900 border border-white/5 rounded-lg p-3 text-left">
+                <span class="block text-xs text-slate-500 uppercase">Adecuación y Experimentos</span>
+                <span class="font-bold text-white">USD $212,000</span>
+              </div>
+            </div>
+          </div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-blue-500 shadow-[0_0_10px_rgba(59,130,246,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2"></div>
+        </div>
+
+        <!-- 2022 - 2024 -->
+        <div class="relative flex flex-col md:flex-row justify-between items-center w-full group">
+          <div class="hidden md:block md:w-1/2"></div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 shadow-[0_0_10px_rgba(16,185,129,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2"></div>
+          <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
+            <div class="bg-slate-800/80 backdrop-blur-md p-6 rounded-2xl border border-white/10 shadow-xl group-hover:border-emerald-500/30 transition-all duration-300">
+              <span class="text-emerald-400 font-bold text-sm tracking-wider uppercase mb-2 block">2022 - 2024</span>
+              <h4 class="text-xl font-bold text-white mb-3">Internacionalización</h4>
+              <p class="text-slate-400 text-sm mb-4">
+                Reinicio de operaciones comerciales apuntando a mercados internacionales (Texas, Guyana) y destacada participación en convocatorias de MinCiencias y COP16.
+              </p>
+              <div class="inline-block bg-slate-900 border border-white/5 rounded-lg p-3">
+                <span class="block text-xs text-slate-500 uppercase">Comercialización Final</span>
+                <span class="font-bold text-white">USD $20,000</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Total Investment Banner -->
+      <div class="mt-20 max-w-4xl mx-auto">
+        <div class="bg-gradient-to-r from-emerald-900/40 to-blue-900/40 border border-white/20 p-8 rounded-3xl flex flex-col md:flex-row items-center justify-between shadow-2xl backdrop-blur-sm">
+          <div>
+            <h4 class="text-white font-bold text-2xl mb-2">Desarrollo Tecnológico Valorado En:</h4>
+            <p class="text-slate-300 font-medium">Capital históricamente invertido y madurado en el tiempo.</p>
+          </div>
+          <div class="mt-6 md:mt-0 md:text-right text-center">
+            <span class="block text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-emerald-400 to-blue-400 drop-shadow-lg">
+              USD $2,432,000
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Action Button PDF -->
+      <div class="mt-16 text-center">
+        <a href="/Historia_Triton.pdf" target="_blank" class="inline-flex items-center gap-3 px-8 py-4 bg-slate-800 hover:bg-slate-700 text-white rounded-xl font-bold text-lg transition-all border border-white/10 shadow-xl shadow-black/20 group">
+          <i class="fas fa-file-pdf text-red-400 text-2xl group-hover:scale-110 transition-transform"></i>
+          Ver Historia Detallada (PDF)
+        </a>
+        <p class="text-slate-500 text-sm mt-3">Haz clic para descargar el documento completo de nuestra línea de tiempo.</p>
+      </div>
+
     </div>
   </section>
 
