Update PDF link to correct filename

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
       <!-- Action Button PDF -->
       <div class="mt-16 text-center">
-        <a href="/Historia_Triton.pdf" target="_blank" class="inline-flex items-center gap-3 px-8 py-4 bg-slate-800 hover:bg-slate-700 text-white rounded-xl font-bold text-lg transition-all border border-white/10 shadow-xl shadow-black/20 group">
+        <a href="/Linea de tiempo - Triton.pdf" target="_blank" class="inline-flex items-center gap-3 px-8 py-4 bg-slate-800 hover:bg-slate-700 text-white rounded-xl font-bold text-lg transition-all border border-white/10 shadow-xl shadow-black/20 group">
           <i class="fas fa-file-pdf text-red-400 text-2xl group-hover:scale-110 transition-transform"></i>
           Ver Historia Detallada (PDF)
         </a>
