--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <!-- Vertical Line -->
         <div class="absolute left-[20px] md:left-1/2 top-4 bottom-4 w-px bg-white/10 md:-translate-x-1/2"></div>
 
-        <!-- 2001 -->
+        <!-- 1. 2001 HOCOL S.A. -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="hidden md:block md:w-1/2"></div>
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
@@ -239,7 +239,7 @@
           </div>
         </div>
 
-        <!-- 2003-2005 -->
+        <!-- 2. 2003-2005 Ecopetrol S.A. -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
              <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
@@ -251,7 +251,7 @@
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
-        <!-- 2004 -->
+        <!-- 3. 2004 ONIMEX -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="hidden md:block md:w-1/2"></div>
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
@@ -264,7 +264,7 @@
           </div>
         </div>
         
-        <!-- 2005-2006 -->
+        <!-- 4. 2005-2006 Ecopetrol S.A. -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
              <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
@@ -276,35 +276,85 @@
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
-        <!-- 2006-2008 -->
+        <!-- 5. 2006 Refineria Barrancabermeja -->
          <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="hidden md:block md:w-1/2"></div>
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-blue-500 shadow-[0_0_10px_rgba(59,130,246,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
           <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
             <div class="bg-slate-800/80 p-5 rounded-2xl border border-white/10 hover:border-blue-500/30 transition-all duration-300">
-              <span class="text-blue-400 font-bold text-xs tracking-wider uppercase mb-1 block">2006 - 2008</span>
-              <h4 class="text-lg font-bold text-white mb-2">Refinería Barrancabermeja y CIRA Infantas</h4>
-              <p class="text-slate-400 text-sm mb-3">Ejecución de múltiples contratos de descontaminación, biorremediación y tratamiento de lodos generados en limpiezas de tanques para Consorcio Santos CMI y Ecopetrol S.A.</p>
-              <div class="bg-slate-900 border border-white/5 rounded-lg p-2 text-xs text-slate-400">
-                Detonante normativo: Se identifica la necesidad urgente de sistemas de separación in-situ debido a la prohibición de tratamientos en campos.
+              <span class="text-blue-400 font-bold text-xs tracking-wider uppercase mb-1 block">2006</span>
+              <h4 class="text-lg font-bold text-white mb-2">Refinería Barrancabermeja</h4>
+              <p class="text-slate-400 text-sm mb-3">Venta y disposición de lodos aceitosos de las plantas U-200. Consorcio Santos CMI.</p>
+               <div class="bg-slate-900 border border-white/5 rounded-lg p-2 text-xs text-slate-400">
+                Se detecta la problemática: Imposibilidad de tratar o mover residuos con norma en campo.
               </div>
             </div>
           </div>
         </div>
 
-        <!-- 2008-2011 -->
+        <!-- 6. 2006-2008 CIRA Infantas -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
              <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
-              <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2008 - 2011</span>
-              <h4 class="text-lg font-bold text-white mb-2">Supt. de Mares & CEMEX Panamá</h4>
-              <p class="text-slate-400 text-sm">Tratamiento de costras/lodos aceitosos en Provincias (2008-2009) y recuperación de sentinas para hornos cementeros en planta CEMEX ubicada en Panamá (2009-2011).</p>
+              <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2006 - 2008</span>
+              <h4 class="text-lg font-bold text-white mb-2">Ecopetrol S.A. | CIRA Infantas</h4>
+              <p class="text-slate-400 text-sm">Descontaminación, limpieza y adecuación de derrames de crudo en zonas operativas (Lote 2).</p>
             </div>
           </div>
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
-        <!-- 2010 - 2012 -->
+        <!-- 7. 2007 Ecopetrol S.A. -->
+        <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
+          <div class="hidden md:block md:w-1/2"></div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
+          <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
+            <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
+              <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2007</span>
+              <h4 class="text-lg font-bold text-white mb-2">Ecopetrol S.A.</h4>
+              <p class="text-slate-400 text-sm">Disposición final, tratamiento de residuos y descontaminación vegetal en la GRB (Lote 2).</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 8. 2007-2008 Ecopetrol S.A. -->
+        <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
+          <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
+             <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
+              <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2007 - 2008</span>
+              <h4 class="text-lg font-bold text-white mb-2">Ecopetrol S.A.</h4>
+              <p class="text-slate-400 text-sm">Segunda etapa de descontaminación, limpieza y adecuación de derrames operativos en CIRA Infantas.</p>
+            </div>
+          </div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
+        </div>
+
+         <!-- 9. 2008-2009 Supt. de Mares -->
+        <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
+          <div class="hidden md:block md:w-1/2"></div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
+          <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
+            <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
+              <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2008 - 2009</span>
+              <h4 class="text-lg font-bold text-white mb-2">Supt. de Mares</h4>
+              <p class="text-slate-400 text-sm">Tratamiento de costras / lodos aceitosos en Provincias.</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 10. 2009-2011 CEMEX Panamá -->
+        <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
+          <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
+             <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
+              <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2009 - 2011</span>
+              <h4 class="text-lg font-bold text-white mb-2">CEMEX Panamá</h4>
+              <p class="text-slate-400 text-sm">Recuperación de sentinas para hornos cementeros en planta CEMEX en Panamá.</p>
+            </div>
+          </div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
+        </div>
+
+        <!-- 11. 2010 - 2012 CEPSA -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="hidden md:block md:w-1/2"></div>
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
@@ -317,20 +367,20 @@
           </div>
         </div>
 
-        <!-- 2012-2014 Tritón Base -->
+        <!-- 12. 2012-2014 Tritón Base -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
              <div class="bg-blue-900/40 p-5 rounded-2xl border border-blue-500/30 shadow-lg shadow-blue-900/20 hover:border-blue-400/50 transition-all duration-300 transform scale-105 my-4">
               <span class="text-blue-400 font-bold text-xs tracking-wider uppercase mb-1 block">2012 - 2014</span>
               <h4 class="text-xl font-bold text-white mb-2">Nacimiento de TECNOLOGÍA TRITÓN</h4>
-              <p class="text-blue-200 text-sm mb-3">Periodo intensivo de invención, diseño, acople y construcción física del primer equipo, basado en el profundo conocimiento acumulado de las fases de los desechos peligrosos.</p>
+              <p class="text-blue-200 text-sm mb-3">Periodo intensivo de invención, diseño, acople y construcción física del primer equipo.</p>
               <div class="inline-block bg-slate-900/80 rounded px-3 py-2 text-xs">Inversión Fases I-III: <strong class="text-white">USD $1,500,000</strong></div>
             </div>
           </div>
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[18px] h-[18px] rounded-full bg-blue-500 shadow-[0_0_15px_rgba(59,130,246,0.8)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
-        <!-- 2013-2015 -->
+        <!-- 13. 2013-2015 Pacific -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="hidden md:block md:w-1/2"></div>
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 shadow-[0_0_10px_rgba(16,185,129,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
@@ -344,36 +394,25 @@
           </div>
         </div>
 
-        <!-- 2015-2016 -->
+        <!-- 14. 2015-2020 Crisis y Palma -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
              <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
-              <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2015 - 2016</span>
-              <h4 class="text-lg font-bold text-white mb-2">Crisis Petrolera & Yondó</h4>
-              <p class="text-slate-400 text-sm mb-3">Suspensión temporal por caída del petróleo tras overhaul de equipos y adecuación de terreno en Yondó para recibir residuos de Refinería.</p>
-              <div class="inline-block bg-slate-900 rounded px-2 py-1 text-xs">Inversión Adecuaciones/Overhaul: <strong class="text-white">USD $75,000</strong></div>
+              <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2015 - 2020</span>
+              <h4 class="text-lg font-bold text-white mb-2">Crisis Petrolera & Industria de la Palma</h4>
+              <p class="text-slate-400 text-sm mb-3">Pausa por caída del petróleo, seguido de adecuación de terreno en Yondó. Pruebas experimentales exitosas en piscinas de oxidación de Palmas del Cesar demostrando la versatilidad de Tritón en otro sector (pausado luego por pandemia).</p>
+              <div class="inline-block bg-slate-900 rounded px-2 py-1 text-xs text-left mb-1">Inversión Overhaul/Adecuaciones: <strong class="text-white">USD $75,000</strong></div><br>
+              <div class="inline-block bg-slate-900 rounded px-2 py-1 text-xs text-left">Inversión Experimental Palma: <strong class="text-white">USD $92,000</strong></div>
             </div>
           </div>
-          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 border-[2px] border-slate-900 shadow-[0_0_10px_rgba(16,185,129,0.5)] z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
-        <!-- 2018-2020 -->
-        <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
-          <div class="hidden md:block md:w-1/2"></div>
-          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 shadow-[0_0_10px_rgba(16,185,129,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
-          <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
-            <div class="bg-slate-800/80 p-5 rounded-2xl border border-white/10 hover:border-emerald-500/30 transition-all duration-300">
-              <span class="text-emerald-400 font-bold text-xs tracking-wider uppercase mb-1 block">2018 - 2020</span>
-              <h4 class="text-lg font-bold text-white mb-2">Industria de la Palma</h4>
-              <p class="text-slate-400 text-sm mb-3">Pruebas experimentales en piscinas de oxidación demostrando el valor de Tritón en otro sector. Tratamiento exitoso en Palmas del Cesar (pausado por pandemia).</p>
-               <div class="inline-block bg-slate-900 rounded px-3 py-2 text-xs">Inversión Experimental Palma: <strong class="text-white">USD $92,000</strong></div>
-            </div>
-          </div>
-        </div>
-
-        <!-- 2022-2024 -->
+        <!-- 15. 2022-2024 -->
         <div class="relative flex flex-col md:flex-row justify-between items-center w-full group">
-           <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
+           <div class="hidden md:block md:w-1/2"></div>
+           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[16px] h-[16px] rounded-full bg-emerald-500 shadow-[0_0_15px_rgba(16,185,129,0.8)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
+           <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
              <div class="bg-slate-800/80 p-5 rounded-2xl border border-emerald-500/30 shadow-lg shadow-emerald-900/20 hover:border-emerald-400 transition-all duration-300">
               <span class="text-emerald-400 font-bold text-xs tracking-wider uppercase mb-1 block">2022 - 2024</span>
               <h4 class="text-xl font-bold text-white mb-2">Expansión Global</h4>
@@ -381,7 +420,6 @@
               <div class="inline-block bg-slate-900 rounded px-3 py-2 text-xs text-left">Inversión Reciente: <strong class="text-white">USD $20,000</strong></div>
             </div>
           </div>
-          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[16px] h-[16px] rounded-full bg-emerald-500 shadow-[0_0_15px_rgba(16,185,129,0.8)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
       </div>
