--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <div class="bg-slate-800/80 p-5 rounded-2xl border border-white/10 hover:border-blue-500/30 transition-all duration-300">
               <span class="text-blue-400 font-bold text-xs tracking-wider uppercase mb-1 block">2006</span>
               <h4 class="text-lg font-bold text-white mb-2">Refinería Barrancabermeja</h4>
-              <p class="text-slate-400 text-sm mb-3">Venta y disposición de lodos aceitosos de las plantas U-200. Consorcio Santos CMI.</p>
+              <p class="text-slate-400 text-sm mb-3">Se realizó el servicio de descontaminación y separación mediante la aplicación de las tecnologías de biodegradación y biorremediación de lodos aceitosos e hidrocarburos generados de las limpiezas de tanques de la Gerencia Complejo Barrancabermeja (2006-2008 en Ecopetrol S.A).</p>
                <div class="bg-slate-900 border border-white/5 rounded-lg p-2 text-xs text-slate-400">
                 Se detecta la problemática: Imposibilidad de tratar o mover residuos con norma en campo.
               </div>
