Update Supt. de Mares title with (ECOPETROL)

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
             <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
               <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2008 - 2009</span>
-              <h4 class="text-lg font-bold text-white mb-2">Supt. de Mares</h4>
+              <h4 class="text-lg font-bold text-white mb-2">Supt. de Mares (ECOPETROL)</h4>
               <p class="text-slate-400 text-sm">Tratamiento de costras / lodos aceitosos en Provincias.</p>
             </div>
           </div>
