--- a/index.html
+++ b/index.html
@@ -406,16 +406,15 @@
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 shadow-[0_0_10px_rgba(16,185,129,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
-        <!-- 15. 2015-2020 Crisis y Palma -->
+        <!-- 15. 2015-2020 Industria de la Palma -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="hidden md:block md:w-1/2"></div>
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 border-[2px] border-slate-900 shadow-[0_0_10px_rgba(16,185,129,0.5)] z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
           <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
             <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
               <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2015 - 2020</span>
-              <h4 class="text-lg font-bold text-white mb-2">Crisis Petrolera & Industria de la Palma</h4>
-              <p class="text-slate-400 text-sm mb-3">Pausa por caída del petróleo, seguido de adecuación de terreno en Yondó. Pruebas experimentales exitosas en piscinas de oxidación de Palmas del Cesar demostrando la versatilidad de Tritón en otro sector (pausado luego por pandemia).</p>
-              <div class="inline-block bg-slate-900 rounded px-2 py-1 text-xs text-left mb-1">Inversión Overhaul/Adecuaciones: <strong class="text-white">USD $75,000</strong></div><br>
+              <h4 class="text-lg font-bold text-white mb-2">Industria de la Palma</h4>
+              <p class="text-slate-400 text-sm mb-3">Pruebas experimentales exitosas en piscinas de oxidación de Palmas del Cesar demostrando la versatilidad de Tritón en otro sector (pausado luego por pandemia).</p>
               <div class="inline-block bg-slate-900 rounded px-2 py-1 text-xs text-left">Inversión Experimental Palma: <strong class="text-white">USD $92,000</strong></div>
             </div>
           </div>
