Remove birth of tech from timeline and add Success Cases section

--- a/index.html
+++ b/index.html
@@ -379,50 +379,38 @@
           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-slate-500 border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
-        <!-- 13. 2012-2014 Tritón Base -->
+        <!-- 13. 2013-2015 Pacific -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
           <div class="hidden md:block md:w-1/2"></div>
-          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[18px] h-[18px] rounded-full bg-blue-500 shadow-[0_0_15px_rgba(59,130,246,0.8)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 shadow-[0_0_10px_rgba(16,185,129,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
           <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
-            <div class="bg-blue-900/40 p-5 rounded-2xl border border-blue-500/30 shadow-lg shadow-blue-900/20 hover:border-blue-400/50 transition-all duration-300 transform scale-105 my-4">
-              <span class="text-blue-400 font-bold text-xs tracking-wider uppercase mb-1 block">2012 - 2014</span>
-              <h4 class="text-xl font-bold text-white mb-2">Nacimiento de TECNOLOGÍA TRITÓN</h4>
-              <p class="text-blue-200 text-sm mb-3">Periodo intensivo de invención, diseño, acople y construcción física del primer equipo.</p>
-              <div class="inline-block bg-slate-900/80 rounded px-3 py-2 text-xs">Inversión Fases I-III: <strong class="text-white">USD $1,500,000</strong></div>
-            </div>
-          </div>
-        </div>
-
-        <!-- 14. 2013-2015 Pacific -->
-        <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
-          <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
-             <div class="bg-slate-800/80 p-5 rounded-2xl border border-white/10 hover:border-emerald-500/30 transition-all duration-300">
+            <div class="bg-slate-800/80 p-5 rounded-2xl border border-white/10 hover:border-emerald-500/30 transition-all duration-300">
               <span class="text-emerald-400 font-bold text-xs tracking-wider uppercase mb-1 block">2013 - 2015</span>
               <h4 class="text-lg font-bold text-white mb-2">PACIFIC RUBIALES</h4>
               <p class="text-slate-400 text-sm mb-3">Pruebas piloto exitosas procesando más de 250.000 barriles de fondos de tanques en Campo Sabanero y la piscina CPF2.</p>
               <div class="inline-block bg-slate-900 rounded px-3 py-2 text-xs">Costo Experimental: <strong class="text-white">USD $410,000</strong></div>
             </div>
           </div>
-          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 shadow-[0_0_10px_rgba(16,185,129,0.5)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
-        <!-- 15. 2015-2020 Industria de la Palma -->
+        <!-- 14. 2015-2020 Industria de la Palma -->
         <div class="relative flex flex-col md:flex-row justify-between items-center mb-8 w-full group">
-          <div class="hidden md:block md:w-1/2"></div>
-          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 border-[2px] border-slate-900 shadow-[0_0_10px_rgba(16,185,129,0.5)] z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
-          <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
-            <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
+          <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
+             <div class="bg-slate-800/50 p-5 rounded-2xl border border-white/5 hover:border-white/20 transition-all duration-300">
               <span class="text-slate-400 font-bold text-xs tracking-wider uppercase mb-1 block">2015 - 2020</span>
               <h4 class="text-lg font-bold text-white mb-2">Industria de la Palma</h4>
               <p class="text-slate-400 text-sm mb-3">Pruebas experimentales exitosas en piscinas de oxidación de Palmas del Cesar demostrando la versatilidad de Tritón en otro sector (pausado luego por pandemia).</p>
               <div class="inline-block bg-slate-900 rounded px-2 py-1 text-xs text-left">Inversión Experimental Palma: <strong class="text-white">USD $92,000</strong></div>
             </div>
           </div>
+          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[14px] h-[14px] rounded-full bg-emerald-500 border-[2px] border-slate-900 shadow-[0_0_10px_rgba(16,185,129,0.5)] z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
-        <!-- 16. 2022-2024 Expansion -->
+        <!-- 15. 2022-2024 Expansion -->
         <div class="relative flex flex-col md:flex-row justify-between items-center w-full group">
-           <div class="w-full md:w-1/2 pl-12 md:pl-0 md:pr-12 md:text-right">
+           <div class="hidden md:block md:w-1/2"></div>
+           <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[16px] h-[16px] rounded-full bg-emerald-500 shadow-[0_0_15px_rgba(16,185,129,0.8)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
+           <div class="w-full md:w-1/2 pl-12 md:pl-12 md:pr-0 text-left">
              <div class="bg-slate-800/80 p-5 rounded-2xl border border-emerald-500/30 shadow-lg shadow-emerald-900/20 hover:border-emerald-400 transition-all duration-300">
               <span class="text-emerald-400 font-bold text-xs tracking-wider uppercase mb-1 block">2022 - 2024</span>
               <h4 class="text-xl font-bold text-white mb-2">Expansión Global</h4>
@@ -430,9 +418,76 @@
               <div class="inline-block bg-slate-900 rounded px-3 py-2 text-xs text-left">Inversión Reciente: <strong class="text-white">USD $20,000</strong></div>
             </div>
           </div>
-          <div class="absolute left-[13px] md:left-1/2 top-6 md:top-1/2 flex items-center justify-center w-[16px] h-[16px] rounded-full bg-emerald-500 shadow-[0_0_15px_rgba(16,185,129,0.8)] border-[2px] border-slate-900 z-10 md:-translate-x-1/2 md:-translate-y-1/2 group-hover:scale-125 transition-transform"></div>
         </div>
 
+      <!-- Subsection: Success Cases -->
+      <div class="mt-24">
+        <div class="text-center mb-12">
+          <h4 class="text-emerald-400 font-bold uppercase tracking-widest text-sm mb-2">Casos de Éxito</h4>
+          <h3 class="text-3xl font-bold text-white">Aplicaciones de la Tecnología Tritón</h3>
+        </div>
+        
+        <div class="grid md:grid-cols-2 gap-6 max-w-5xl mx-auto">
+          <!-- Case 1: Refinería -->
+          <div class="bg-slate-800/40 p-6 rounded-2xl border border-white/5 hover:border-blue-500/30 transition-all group">
+            <div class="flex items-start gap-4">
+              <div class="w-12 h-12 rounded-xl bg-blue-500/10 flex items-center justify-center shrink-0 border border-blue-500/20">
+                <i class="fas fa-industry text-blue-400"></i>
+              </div>
+              <div>
+                <h5 class="text-lg font-bold text-white mb-2 group-hover:text-blue-400 transition-colors">Refinería Barrancabermeja</h5>
+                <p class="text-slate-400 text-sm leading-relaxed">
+                  Servicio integral de descontaminación y separación mediante biodegradación y biorremediación de lodos aceitosos generados en limpiezas de tanques.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Case 2: CEMEX -->
+          <div class="bg-slate-800/40 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/30 transition-all group">
+            <div class="flex items-start gap-4">
+              <div class="w-12 h-12 rounded-xl bg-emerald-500/10 flex items-center justify-center shrink-0 border border-emerald-500/20">
+                <i class="fas fa-ship text-emerald-400"></i>
+              </div>
+              <div>
+                <h5 class="text-lg font-bold text-white mb-2 group-hover:text-emerald-400 transition-colors">CEMEX Panamá</h5>
+                <p class="text-slate-400 text-sm leading-relaxed">
+                  Recuperación exitosa de sentinas para su aprovechamiento en hornos cementeros, aplicando estándares internacionales de tratamiento.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Case 3: Pacific Rubiales -->
+          <div class="bg-slate-800/40 p-6 rounded-2xl border border-white/5 hover:border-blue-500/30 transition-all group">
+            <div class="flex items-start gap-4">
+              <div class="w-12 h-12 rounded-xl bg-blue-500/10 flex items-center justify-center shrink-0 border border-blue-500/20">
+                <i class="fas fa-vial text-blue-400"></i>
+              </div>
+              <div>
+                <h5 class="text-lg font-bold text-white mb-2 group-hover:text-blue-400 transition-colors">PACIFIC RUBIALES</h5>
+                <p class="text-slate-400 text-sm leading-relaxed">
+                  Pruebas piloto de alto impacto procesando más de 250,000 barriles de fondos de tanques con resultados sobresalientes en Campo Sabanero.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Case 4: Industria de la Palma -->
+          <div class="bg-slate-800/40 p-6 rounded-2xl border border-white/5 hover:border-emerald-500/30 transition-all group">
+            <div class="flex items-start gap-4">
+              <div class="w-12 h-12 rounded-xl bg-emerald-500/10 flex items-center justify-center shrink-0 border border-emerald-500/20">
+                <i class="fas fa-leaf text-emerald-400"></i>
+              </div>
+              <div>
+                <h5 class="text-lg font-bold text-white mb-2 group-hover:text-emerald-400 transition-colors">Industria de la Palma</h5>
+                <p class="text-slate-400 text-sm leading-relaxed">
+                  Validación de la versatilidad tecnológica de Tritón en el sector agroindustrial, tratando piscinas de oxidación con alta eficiencia.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Total Investment Banner -->
